ant target to download and unpack arm compatible libs

--- a/build.xml
+++ b/build.xml
@@ -76,6 +76,22 @@
     <extlib name="steamworks" path="lib/ext/steamworks" url="${ext-lib-base}/steamworks/current" />
   </target>
 
+    <target name="extlib/jogl-arm" depends="extlib/jogl">
+        <mkdir dir="lib/ext/jogl" />
+        <get dest="lib/ext/jogl/" verbose="true">
+            <url url="https://jogamp.org/deployment/v2.5.0/jar/jogl-all.jar" />
+            <url url="https://jogamp.org/deployment/v2.5.0/jar/jogl-all-natives-macosx-universal.jar" />
+            <url url="https://jogamp.org/deployment/v2.5.0/jar/gluegen-rt.jar" />
+            <url url="https://jogamp.org/deployment/v2.5.0/jar/gluegen-rt-natives-macosx-universal.jar" />
+        </get>
+        <mkdir dir="lib/ext/jogl/natives/macosx-universal" />
+        <unjar src="lib/ext/jogl/jogl-all-natives-macosx-universal.jar" dest="lib/ext/jogl">
+            <patternset includes="natives/**" />
+        </unjar>
+        <unjar src="lib/ext/jogl/gluegen-rt-natives-macosx-universal.jar" dest="lib/ext/jogl">
+            <patternset includes="natives/**" />
+        </unjar>
+    </target>
 
   <target name="hafen-client" depends="build-env, extlib/jogl, extlib/lwjgl-gl, extlib/steamworks, resources">
     <condition property="explicit-annotations">
@@ -159,7 +175,7 @@
     <copy file="local-config.properties" tofile="build/haven-config.properties" failonerror="false" quiet="true" />
   </target>
 
-  <target name="bin" depends="jar, extlib/jogl, extlib/lwjgl-gl, extlib/steamworks, res-jar">
+  <target name="bin" depends="jar, extlib/jogl-arm, extlib/lwjgl-gl, extlib/steamworks, res-jar">
     <mkdir dir="bin" />
     <copy todir="bin">
       <fileset dir="build">
